HelloWorldService/deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: helloweb
  labels:
    app: hello
spec:
  selector:
    matchLabels:
      app: hello
  template:
    metadata:
      labels:
        app: hello
    spec:
      affinity:
        nodeAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - weight: 80
            preference:
              matchExpressions:
              - key: type
                operator: In
                values:
                - operation
          - weight: 20
            preference:
              matchExpressions:
              - key: type
                operator: In
                values:
                - base
      containers:
      - name: hello-app
        image: gcr.io/google-samples/hello-app:1.0
        ports:
        - containerPort: 8080
        securityContext:
          runAsUser: 405
          readOnlyRootFilesystem: true
